# Django_fullstack

./: .gitignore  README.md  build.sh  pyproject.toml
mysite/: build.sh  db.sqlite3  pyproject.toml  pytest.ini
mysite/accounts/: urls.py  views.py
mysite/accounts/templates/accounts/: login.html
mysite/contacts/: models.py  urls.py  views.py
mysite/contacts/migrations/: 0001_initial.py
mysite/contacts/templates/contacts/: create.html
mysite/mysite/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
mysite/polls/: apps.py  models.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_question_active.py  0003_question_x_alter_question_pub_date.py  0004_alter_choice_options_alter_question_options_and_more.py
mysite/polls/templates/polls/: index.html
mysite/tests/contacts/: test_forms.py  test_views.py
mysite/tests/polls/: __init__.py  test_models.py
