[project]
name = "django_project"
version = "0.1.0"
description = ""
authors = [
    {name = "joaolsouto",email = "contato.joaolsouto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipython"
]
